# mail_parser

./: .gitignore  .typos.toml  CHANGELOG.md  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  checksum-Elixir.MailParser.exs  mix.exs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust-ci.yml
lib/: mail_parser.ex
lib/mail_parser/: attachment.ex
native/mail_parser_nif/: Cargo.toml  README.md
native/mail_parser_nif/.cargo/: config
native/mail_parser_nif/src/: lib.rs
native/mailparser/: Cargo.toml  README.md
test/: mail_parser_test.exs
test/fixtures/: example.txt
