[package]
name = "mail_parser_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "mail_parser_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mail-parser = { version = "0.4.5", default-features = false }
rustler = "0.25.0"

[profile.release]
strip = "debuginfo"
lto = true
