[package]
name = "mail_parser_nif"
version = "0.1.0"
authors = ["kloeckner-i"]
edition = "2021"
repository = "https://github.com/kloeckner-i/mail_parser"
keywords = ["elixir"]

[lib]
name = "mail_parser_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mail-parser = { version = "0.7.0", default-features = false }
rustler = "0.26.0"

[profile.release]
strip = "debuginfo"
lto = true
